--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 name                = Test-Warning
 author              = Karen Etheridge <ether@cpan.org>
-abstract            = ...
+abstract            = Test for warnings and the lack of them
 copyright_holder    = Karen Etheridge
 copyright_year      = 2013
 license             = Perl_5
