copy auto-generated pod coverage test

--- a/dist.ini
+++ b/dist.ini
@@ -56,7 +56,7 @@ location = root
 [NoTabsTests]
 [EOLTests]
 [PodSyntaxTests]
-[PodCoverageTests]
+;[PodCoverageTests]         ; XXX this module breaks these! :o
 ;[Test::Pod::LinkCheck]     many outstanding bugs
 [Test::Pod::No404s]
 [Test::PodSpelling]
