s/Test::Warning/Test::Warnings/g

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name                = Test-Warning
+name                = Test-Warnings
 author              = Karen Etheridge <ether@cpan.org>
 abstract            = Test for warnings and the lack of them
 copyright_holder    = Karen Etheridge
@@ -18,7 +18,7 @@ exclude_filename = LICENSE
 version_regexp = ^v([\d._]+)(-TRIAL)?$
 
 [GithubMeta]
-homepage = http://metacpan.org/module/Test::Warning
+homepage = http://metacpan.org/module/Test::Warnings
 
 [Authority]
 authority = cpan:ETHER
