link to the blog post rather than including the text in the uploaded dist

--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,7 @@ license             = Perl_5
 
 [Git::GatherDir]
 exclude_filename = LICENSE
+exclude_filename = blog_20130309.md
 
 [@Filter]
 -bundle = @Basic
