fix spelling test

--- a/dist.ini
+++ b/dist.ini
@@ -63,6 +63,7 @@ location = root
 [Test::PodSpelling]
 stopwords = subtest
 stopwords = subtests
+stopwords = YANWT
 
 [Test::Compile]
 fail_on_warning = 1
