avoid adding these prereqs if we build in the presence of TB2

--- a/dist.ini
+++ b/dist.ini
@@ -24,6 +24,7 @@ homepage = http://metacpan.org/module/Test::Warnings
 authority = cpan:ETHER
 
 [AutoPrereqs]
+skip = ^TB2::
 
 [MetaNoIndex]
 directory = t
