--- a/dist.ini
+++ b/dist.ini
@@ -4,119 +4,15 @@ copyright_holder    = Karen Etheridge
 copyright_year      = 2013
 license             = Perl_5
 
-[Git::GatherDir]
-exclude_filename = LICENSE
-exclude_filename = blog_20130309.md
-
-[@Filter]
--bundle = @Basic
--remove = GatherDir
--remove = ExtraTests
-
-; use V= to override; otherwise version is incremented from last tag
-[Git::NextVersion]
-version_regexp = ^v([\d._]+)(-TRIAL)?$
-
-[GithubMeta]
-homepage = http://metacpan.org/module/Test::Warnings
-
-[Authority]
-authority = cpan:ETHER
-
-[AutoPrereqs]
-skip = ^TB2::
-
-[MetaNoIndex]
-directory = t
-directory = xt
-directory = examples
-
-[MetaProvides::Package]
-meta_noindex = 1
-
-;[ContributorsFromGit]
-
-[InstallGuide]
-[MetaConfig]
-[MetaJSON]
-[Git::Describe]
-[PkgVersion]
-[MinimumPerl]
-
-[CopyFilesFromBuild]
-copy = LICENSE
-
-[PodWeaver]
-;[%PodWeaver]
-
-[ReadmeAnyFromPod]
-type = markdown
-filename = README.md
-location = root
-
-[NoTabsTests]
-[EOLTests]
-[PodSyntaxTests]
-;[PodCoverageTests]         ; XXX this module breaks these! :o
-;[Test::Pod::LinkCheck]     many outstanding bugs
-[Test::Pod::No404s]
-[Test::PodSpelling]
+[@Author::ETHER]
 stopwords = subtest
 stopwords = subtests
 stopwords = YANWT
+Git::GatherDir.exclude_filename[] = blog_20130309.md
+AutoPrereqs.skip[] = ^TB2
+; we have our own patched version of pod coverage tests,
+; to work around Test::Warnings adding an END check
+-remove = PodCoverageTests
 
-[Test::Compile]
-fail_on_warning = 1
-bail_out_on_fail = 1
+[Test::Kwalitee::Extra]
 
-[Test::MinimumVersion]
-:version = 2.000003
-max_target_perl = 5.008008
-
-[MetaTests]
-[Test::CPAN::Changes]
-[Test::Version]
-;[Test::UnusedVars]  ; broken in 5.16.0!
-[Test::ChangesHasContent]
-;[Test::Kwalitee::Extra]
-
-[Test::CheckDeps]
-:version = 0.005
-fatal = 1
-
-[CheckPrereqsIndexed]
-
-[RunExtraTests]
-
-[Git::Remote::Check]
-remote_branch = master
-
-[Git::CheckFor::CorrectBranch]
-:version = 0.004
-release_branch = master
-release_branch = stable
-
-[Git::Check]
-allow_dirty = README.md
-allow_dirty = LICENSE
-
-[NextRelease]
-:version = 4.300018
-format = %-8V  %{yyyy-MM-dd HH:mm:ss ZZZZ}d (%U)
-
-[Git::Commit]
-allow_dirty = Changes
-allow_dirty = README.md
-allow_dirty = LICENSE
-commit_msg = %N-%v%t%n%n%c
-
-[Git::Tag]
-tag_format = v%v%t
-tag_message = v%v%t
-
-[Git::Push]
-
-[InstallRelease]
-install_command = cpanm .
-
-[Clean]
