run with a smaller test of kwalitee checks

--- a/dist.ini
+++ b/dist.ini
@@ -11,5 +11,9 @@ AutoPrereqs.skip[] = ^TB2
 ; to work around Test::Warnings adding an END check
 -remove = PodCoverageTests
 
-[Test::Kwalitee::Extra]
+; not usable, due to plan error (TODO: diagnose/fix)
+;[Test::Kwalitee::Extra]
+;; this catches on 'use Foo::Bar::Baz' in t/06-skip-all.t
+;arg = !prereq_matches_use
 
+[Test::Kwalitee]
