try to switch to [Test::Kwalitee::Extra]; fail, but document what happened

--- a/dist.ini
+++ b/dist.ini
@@ -13,7 +13,7 @@ AutoPrereqs.skip[] = ^TB2
 
 ; not usable, due to plan error (TODO: diagnose/fix)
 ;[Test::Kwalitee::Extra]
-;; this catches on 'use Foo::Bar::Baz' in t/06-skip-all.t
-;arg = !prereq_matches_use
+; this catches on 'use Foo::Bar::Baz' in t/06-skip-all.t
+arg = !prereq_matches_use
 
 [Test::Kwalitee]
