add contributors data to meta and pod

--- a/dist.ini
+++ b/dist.ini
@@ -16,4 +16,7 @@ AutoPrereqs.skip[] = ^TB2
 ; this catches on 'use Foo::Bar::Baz' in t/06-skip-all.t
 arg = !prereq_matches_use
 
+; authordep Pod::Weaver::Section::Contributors
+[ContributorsFromGit]
+
 [Test::Kwalitee]
