depend on latest release of bundle

--- a/dist.ini
+++ b/dist.ini
@@ -5,6 +5,7 @@ copyright_year      = 2013
 license             = Perl_5
 
 [@Author::ETHER]
+:version = 0.009
 Git::GatherDir.exclude_filename[] = blog_20130309.md
 AutoPrereqs.skip[] = ^TB2
 ; we have our own patched version of pod coverage tests,
