use EUMM instead of Module::Build::Tiny

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,8 @@ license             = Perl_5
 :version = 0.009
 Git::GatherDir.exclude_filename[] = blog_20130309.md
 AutoPrereqs.skip[] = ^TB2
+installer = MakeMaker
+
 ; we have our own patched version of pod coverage tests,
 ; to work around Test::Warnings adding an END check
 -remove = PodCoverageTests
