copy auto-generated unused vars test

--- a/dist.ini
+++ b/dist.ini
@@ -8,9 +8,10 @@ license             = Perl_5
 :version = 0.011
 Git::GatherDir.exclude_filename[] = blog_20130309.md
 AutoPrereqs.skip[] = ^TB2
-; we have our own patched version of pod coverage tests,
+; we have our own patched version of these tests,
 ; to work around Test::Warnings adding an END check
 -remove = PodCoverageTests
+-remove = Test::UnusedVars
 
 ; not usable, due to plan error (TODO: diagnose/fix)
 ;[Test::Kwalitee::Extra]
