affirm that we have no non-core runtime prereqs

--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,10 @@ AutoPrereqs.skip[] = ^TB2
 ; this catches on 'use Foo::Bar::Baz' in t/06-skip-all.t
 arg = !prereq_matches_use
 
+[OnlyCorePrereqs]
+phase = runtime
+starting_version = 5.010001
+
 ; authordep Pod::Weaver::Section::Contributors
 [ContributorsFromGit]
 
