keep track of why this is our minimum bar for core prereq checks

--- a/dist.ini
+++ b/dist.ini
@@ -15,7 +15,7 @@ AutoPrereqs.skip[] = ^TB2
 
 [OnlyCorePrereqs]
 phase = runtime
-starting_version = 5.010001
+starting_version = 5.010001 ; parent
 
 ; authordep Pod::Weaver::Section::Contributors
 [ContributorsFromGit]
