--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,7 @@ license             = Perl_5
 :version = 0.019
 Git::GatherDir.exclude_filename[] = blog_20130309.md
 AutoPrereqs.skip[] = ^TB2
+Test::MinimumVersion.max_target_perl = 5.006
 ; we have our own patched version of these tests,
 ; to work around Test::Warnings adding an END check
 -remove = PodCoverageTests
