--- a/dist.ini
+++ b/dist.ini
@@ -18,5 +18,7 @@ Test::MinimumVersion.max_target_perl = 5.006
 phase = runtime
 starting_version = 5.010001 ; parent
 
+; authordep Pod::Weaver = 4
 ; authordep Pod::Weaver::Section::Contributors
+
 [ContributorsFromGit]
