--- a/dist.ini
+++ b/dist.ini
@@ -5,10 +5,11 @@ copyright_year      = 2013
 license             = Perl_5
 
 [@Author::ETHER]
-:version = 0.019
+:version = 0.041
 Git::GatherDir.exclude_filename[] = blog_20130309.md
 AutoPrereqs.skip[] = ^TB2
 Test::MinimumVersion.max_target_perl = 5.006
+Test::Portability.options = test_one_dot = 0
 ; we have our own patched version of these tests,
 ; to work around Test::Warnings adding an END check
 -remove = PodCoverageTests
