tweak core prereq checks

--- a/dist.ini
+++ b/dist.ini
@@ -16,8 +16,10 @@ Test::Portability.options = test_one_dot = 0
 -remove = Test::UnusedVars
 
 [OnlyCorePrereqs]
+:version = 0.013
 phase = runtime
-starting_version = 5.010001 ; parent
+starting_version = 5.006    ; warnings
+check_dual_life_versions = 0
 
 ; authordep Pod::Weaver = 4
 ; authordep Pod::Weaver::Section::Contributors
