--- a/dist.ini
+++ b/dist.ini
@@ -27,3 +27,7 @@ check_dual_life_versions = 0
 [ContributorsFromGit]
 
 [Test::CleanNamespaces]
+
+[MetaResources]
+x_IRC = irc://irc.perl.org/#perl-qa
+x_MailingList = http://lists.perl.org/list/perl-qa.html
