File::pushd before 1.004 does "warnings->import" in the main namespace
..which leads to fun things like:
Not enough arguments for Test::Warnings::warnings at .../File/pushd.pm line 3, near "warnings->import "
e.g. see http://www.cpantesters.org/cpan/report/60fb2b36-c98d-11e4-abdb-993e69ee33dd

--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,7 @@ Test::MinimumVersion.max_target_perl = 5.006
 :version = 0.013
 starting_version = 5.006    ; warnings
 check_dual_life_versions = 0
+skip = CPAN::Meta::Check    ; in t/zzz-check-breaks.t
 
 [Prereqs::Soften]
 module = Test::Tester
@@ -33,6 +34,11 @@ x_MailingList = http://lists.perl.org/list/perl-qa.html
 [Prereqs / DevelopRequires]
 Test::Deep = 0
 Test::NoWarnings = 0
+
+[Breaks]
+File::pushd = < 1.004
+
+[Test::CheckBreaks]
 
 ; copy the (passing) example scripts into xt for additional test coverage
 [GenerateFile / synopsis_1]
