reduce the number of prereqs we add

--- a/dist.ini
+++ b/dist.ini
@@ -18,7 +18,6 @@ Test::MinimumVersion.max_target_perl = 5.006
 :version = 0.013
 starting_version = 5.006    ; warnings
 check_dual_life_versions = 0
-skip = CPAN::Meta::Check    ; in t/zzz-check-breaks.t
 
 [Prereqs::Soften]
 module = Test::Tester
@@ -36,6 +35,8 @@ Test::NoWarnings = 0
 File::pushd = < 1.004
 
 [Test::CheckBreaks]
+:version = 0.014
+no_forced_deps = 1
 
 ; copy the (passing) example scripts into xt for additional test coverage
 [GenerateFile / synopsis_1]
