move this prereq to suggests, not recommends

--- a/dist.ini
+++ b/dist.ini
@@ -26,6 +26,8 @@ check_dual_life_versions = 0
 
 [Prereqs::Soften]
 module = Test::Tester
+copy_to = develop.requires
+to_relationship = suggests
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#perl-qa
