switch from stringy to block eval

--- a/dist.ini
+++ b/dist.ini
@@ -26,6 +26,7 @@ check_dual_life_versions = 0
 
 [Prereqs::Soften]
 module = Test::Tester
+module = PadWalker
 copy_to = develop.requires
 to_relationship = suggests
 
